+ github account + stackoverflow account + CV + Fixed notes overflow

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -123,3 +123,7 @@
 	font-size: 20px;
 	font-weight: bold;
 }
+
+.cv {
+	float: right;
+}
